Ajout d'une route pour depenser de l'argent
