# src/api/points/index.js
@@ -1,0 +1,8 @@
+'use strict';
+
+const wrap = require('co-express');
+const controller = require('./points');
+
+module.exports = {
+    earnPoints: wrap(controller.earnPoints)
+};
